[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/SaveNode/Mob/mobspike.gd" type="Script" id=1]
[ext_resource path="res://GFX/Charcter/mobspike.png" type="Texture" id=2]
[ext_resource path="res://GFX/Charcter/mobspike-2.png" type="Texture" id=3]
[ext_resource path="res://GFX/Charcter/mobspike-3.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "sleep",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.5, 17 )

[node name="mobspike" type="KinematicBody2D"]
scale = Vector2( 1.4355, 1.4355 )
collision_layer = 64
collision_mask = 195
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "sleep"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 16 )
shape = SubResource( 2 )

[node name="floor_checker" type="RayCast2D" parent="."]
enabled = true
collision_mask = 2

[node name="spike" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="spike"]
polygon = PoolVector2Array( -11, 0, -11, -10, -5, -19, 3, -19, 8, -10, 8, 0 )

[node name="bodymob" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="bodymob"]
position = Vector2( -1.5, 14 )
shape = SubResource( 3 )

[connection signal="body_entered" from="spike" to="." method="_on_spike_body_entered"]
[connection signal="body_entered" from="bodymob" to="." method="_on_bodymob_body_entered"]
